day10 - cleanup